[package]
name = "alice"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "3.3.2"
ctrlc = "3.1.6"
derive_more = "0.99.14"
clap = "3.0.0-beta.5"
reqwest = { version = "0.11", features = ["json"] }
#reqwest = "0.11"
rand = "0.8.4"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
log = "0.4"
env_logger = "0.8.1"
once_cell = "1.5.2"
pickledb = "0.4.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
futures-util = "0.3.15"
futures = "0.3.15"
aries-vcx = { git = "https://github.com/hyperledger/aries-vcx", tag = "0.24.1" }
